Fixed page header overlaps in-page anchors

--- a/assets/less/components/anchors.less
+++ b/assets/less/components/anchors.less
@@ -9,3 +9,6 @@
         }    
     }
 } 
+html, body {
+    scroll-padding-top: @navbar-height;
+}
